packages/x86: detect architecture, not x86/64 target
These spots should be detecting the amd64 architecture, not the
specific target name.  If additional amd64 targets were added, or
the target was renamed, these would fail to build.

Signed-off-by: Elliott Mitchell <ehem+openwrt@m5p.com>

--- a/package/libs/wolfssl/Makefile
+++ b/package/libs/wolfssl/Makefile
@@ -187,7 +187,7 @@ else ifdef CONFIG_aarch64
     CONFIGURE_ARGS += --enable-armasm
     TARGET_CFLAGS:=$(TARGET_CFLAGS:-mcpu%=-mcpu%+crypto)
     Package/libwolfsslcpu-crypto/preinst=$(Package/libwolfsslcpu-crypto/preinst-aarch64)
-else ifdef CONFIG_TARGET_x86_64
+else ifdef CONFIG_x86_64
 	CONFIGURE_ARGS += --enable-intelasm
 endif
 
