build: fold $(KERNEL_MAKEOPTS) into $(KERNEL_MAKE_FLAGS)
Few spots outside of kernel.mk directly access this variable.  One
reference also modifies the -C argument.  As such fold the overall
value into $(KERNEL_MAKE), and the flag into $(KERNEL_MAKE_FLAGS).

Signed-off-by: Elliott Mitchell <ehem+openwrt@m5p.com>

--- a/package/kernel/qca-ssdk/Makefile
+++ b/package/kernel/qca-ssdk/Makefile
@@ -32,7 +32,7 @@ endef
 
 GCC_VERSION=$(shell echo "$(CONFIG_GCC_VERSION)" | sed 's/[^0-9.]*\([0-9.]*\).*/\1/')
 
-LNX_CONFIG_OPTS = LNX_MAKEOPTS='$(KERNEL_MAKEOPTS)' PRJ_PATH=$(PKG_BUILD_DIR) MODULE_TYPE=KSLIB modules
+LNX_CONFIG_OPTS = LNX_MAKEOPTS='-C $(LINUX_DIR) $(KERNEL_MAKE_FLAGS)' PRJ_PATH=$(PKG_BUILD_DIR) MODULE_TYPE=KSLIB modules
 
 MAKE_FLAGS+= \
 	TARGET_NAME=$(CONFIG_TARGET_NAME) \
