build: remove shell.sh
Handling common shell usage may have been valuable in the past.  Yet now
this is almost unused, so inline the single remaining use.  Then delete
the old file.

Signed-off-by: Elliott Mitchell <ehem+openwrt@m5p.com>

--- a/package/kernel/mac80211/Makefile
+++ b/package/kernel/mac80211/Makefile
@@ -370,7 +370,7 @@ define Quilt/Refresh/Package
 endef
 
 define Build/Compile
-	$(SH_FUNC) var2file "$(call shvar,mac80211_config)" $(PKG_BUILD_DIR)/.config
+	[ -z "$$$${$(call shvar,mac80211_config)}" ] || echo "$$$${$(call shvar,mac80211_config)}" > "$(PKG_BUILD_DIR)/.config"
 	$(MAKE) $(MAKE_OPTS) allnoconfig
 	$(call Build/Compile/kmod)
 endef
