config: fix KERNEL_WERROR GCC version dependency
In commit 8753022aeae1 ("toolchain: gcc: switch default to 13") we've
bumped GCC to version 13, but forget to bump GCC version config
dependency for `KERNEL_WERROR` which resulted in `ltq-vmmc` build
regression.

So lets fix it by bumping the GCC version to the default 13 now and
while at it add a small note to any future GCC version bumper, that this
`KERNEL_WERROR` should be handled as well.

References: openwrt/openwrt/pull/15065
Fixes: 8753022aeae1 ("toolchain: gcc: switch default to 13")
Signed-off-by: Petr Štetiar <ynezz@true.cz>

--- a/toolchain/gcc/Config.in
+++ b/toolchain/gcc/Config.in
@@ -2,6 +2,7 @@
 
 choice
 	prompt "GCC compiler Version" if TOOLCHAINOPTS
+	# don't forget to adjust dependency for KERNEL_WERROR
 	default GCC_USE_VERSION_13
 	help
 	  Select the version of gcc you wish to use.
