working on dts patch

--- a/myFilesInProgress/rk3568-linkstar-h68k.dts
+++ b/myFilesInProgress/rk3568-linkstar-h68k.dts
@@ -1,7 +1,10 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR MIT)
 /*
+ * Author: Erik Beck <bacon@tahoma.com>
+ * 
+ * Adapted from 013-v6.4-arm64-dts-rockchip-Add-FriendlyARM-NanoPi-R5C.patch
  * Author: Frank Wunderlich <frank-w@public-files.de>
- *
+ * 
  */
 
 /dts-v1/;
