firewall: add example rules to allow access from WAN
The rules are disabled, but a user will see them in config or GUI and easily enable if needed.

Signed-off-by: Sergey Ponomarev <stokito@gmail.com>

--- a/package/network/config/firewall/files/firewall.config
+++ b/package/network/config/firewall/files/firewall.config
@@ -189,6 +189,23 @@ config redirect 'example_port_forward_ssh'
 	option dest_port	'22'
 	option proto		'tcp'
 
+config rule 'example_wan_ssh_allow'
+	option name 'Allow SSH from WAN'
+	option enabled '0'
+	option src 'wan'
+	option proto 'tcp'
+	option dest_port '22'
+	option target 'ACCEPT'
+
+config rule 'example_wan_https_allow'
+	option name 'Allow HTTP, HTTPS from WAN'
+	option enabled '0'
+	option src 'wan'
+	option proto 'tcp'
+	option dest_port '80 443'
+	option target 'ACCEPT'
+
+
 ### FULL CONFIG SECTIONS
 #config rule
 #	option src		lan
