--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -19,8 +19,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential ccache ecj fastjar file g++ gawk \
         gettext git java-propose-classpath libelf-dev libncurses5-dev \
-        libncursesw5-dev libssl-dev python python2.7-dev python3 unzip wget \
-        python3-distutils python3-setuptools rsync subversion swig time \
+        libncursesw5-dev libssl-dev python3 python-is-python3 python2.7-dev python3-distutils \
+        python3-setuptools unzip wget rsync subversion swig time \
         xsltproc zlib1g-dev 
 
     - name: 更新 feeds
