rockchip: add support for Radxa ZERO 3 series
add support for following boards:

- Radxa ZERO 3E (RK3568)
- Radxa ZERO 3W (RK3568)

Signed-off-by: FUKAUMI Naoki <naoki@radxa.com>

--- a/package/boot/uboot-rockchip/Makefile
+++ b/package/boot/uboot-rockchip/Makefile
@@ -149,6 +149,20 @@ define U-Boot/radxa-cm3-io-rk3566
     radxa_cm3-io
 endef
 
+define U-Boot/radxa-zero-3e-rk3566
+  $(U-Boot/rk3566/Default)
+  NAME:=ZERO 3E
+  BUILD_DEVICES:= \
+    radxa_zero-3e
+endef
+
+define U-Boot/radxa-zero-3w-rk3566
+  $(U-Boot/rk3566/Default)
+  NAME:=ZERO 3W
+  BUILD_DEVICES:= \
+    radxa_zero-3w
+endef
+
 define U-Boot/rock-3c-rk3566
   $(U-Boot/rk3566/Default)
   NAME:=ROCK 3C
@@ -222,6 +236,8 @@ UBOOT_TARGETS := \
   rock-pi-e-rk3328 \
   rock-pi-e-v3-rk3328 \
   radxa-cm3-io-rk3566 \
+  radxa-zero-3e-rk3566 \
+  radxa-zero-3w-rk3566 \
   rock-3c-rk3566 \
   bpi-r2-pro-rk3568 \
   nanopi-r5c-rk3568 \
