--- a/config/Config-kernel.in
+++ b/config/Config-kernel.in
@@ -1134,6 +1134,11 @@ if KERNEL_IP_MROUTE
 
 endif
 
+config KERNEL_MPTCP
+	bool "Enable IPv4 MultiPath TCP support"
+	help
+	  IPv4 MultiPath TCP to kernel support.
+
 #
 # IPv6 configuration
 #
@@ -1174,6 +1179,13 @@ if KERNEL_IPV6
 
 	config KERNEL_LWTUNNEL_BPF
 		def_bool n
+
+	config KERNEL_MPTCP_IPV6
+		bool "Enable IPv6 MultiPath TCP support"
+		default y
+		depends on KERNEL_MPTCP
+		help
+		  IPv6 MultiPath TCP to kernel support.
 
 endif
 
