r8126: add option to enable RSS support
Add option to enable RSS support for better RX performance.

Signed-off-by: Milinda Brantini <C_A_T_T_E_R_Y@outlook.com>

--- a/package/kernel/r8126/Makefile
+++ b/package/kernel/r8126/Makefile
@@ -2,7 +2,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=r8126
 PKG_VERSION:=10.013.00
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=https://github.com/Noltari/rtl8126/releases/download/$(PKG_VERSION)
@@ -24,9 +24,15 @@ define KernelPackage/r8126
   PROVIDES:=kmod-r8169
 endef
 
+define KernelPackage/r8126/config
+config KERNELPACKAGE_r8126_ENABLE_RSS_SUPPORT
+	bool "Include RSS support"
+endef
+
 define Build/Compile
 	+$(KERNEL_MAKE) $(PKG_JOBS) \
 		M="$(PKG_BUILD_DIR)/src" \
+		ENABLE_RSS_SUPPORT=$(if $(CONFIG_KERNELPACKAGE_r8126_ENABLE_RSS_SUPPORT),y,n) \
 		modules
 endef
 
