ds-lite: Configure a logical DS-Lite WAN interface when package is installed
This is required as the behaviour of odhcp6c is changing to not request the AFTR ORO by default.

Signed-off-by: Richard Patterson <richard@helix.net.nz>

--- a/package/network/ipv6/ds-lite/Makefile
+++ b/package/network/ipv6/ds-lite/Makefile
@@ -37,6 +37,8 @@ endef
 define Package/ds-lite/install
 	$(INSTALL_DIR) $(1)/lib/netifd/proto
 	$(INSTALL_BIN) ./files/dslite.sh $(1)/lib/netifd/proto/dslite.sh
+	$(INSTALL_DIR) $(1)/etc/uci-defaults/
+	$(INSTALL_BIN) ./files/dslite.defaults $(1)/etc/uci-defaults/15_dslite
 endef
 
 $(eval $(call BuildPackage,ds-lite))
