change mt76 to repo supporting mt7996 233 enable hostapd to support 11be

--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -1,15 +1,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mt76
-PKG_RELEASE=1
+PKG_RELEASE=2
 
 PKG_LICENSE:=GPLv2
 PKG_LICENSE_FILES:=
 
-PKG_SOURCE_URL:=https://github.com/openwrt/mt76
+PKG_SOURCE_URL:=https://github.com/rmandrad/mt76
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_DATE:=2024-08-21
-PKG_SOURCE_VERSION:=a5e630ef458ce7b91bf522247ef3320ed5845e2a
+PKG_SOURCE_DATE:=2024-08-24
+PKG_SOURCE_VERSION:=90e457b04357318cf347562c487881a4833f0d52
 PKG_MIRROR_HASH:=a16f647206d68d67f9b2b134935f27ed66b7302a4ca8243842987dcfafbe8317
 
 PKG_MAINTAINER:=Felix Fietkau <nbd@nbd.name>
