add 11be to both hostpad-full and wpa_supplicant configs

--- a/package/network/services/hostapd/files/hostapd-full.config
+++ b/package/network/services/hostapd/files/hostapd-full.config
@@ -10,7 +10,7 @@
 # to override previous values of the variables.
 
 # Driver interface for Host AP driver
-#CONFIG_DRIVER_HOSTAP=y
+CONFIG_DRIVER_HOSTAP=y
 
 # Driver interface for wired authenticator
 CONFIG_DRIVER_WIRED=y
@@ -166,10 +166,10 @@ CONFIG_IEEE80211AC=y
 CONFIG_IEEE80211BE=y
 
 # Simultaneous Authentication of Equals (SAE), WPA3-Personal
-#CONFIG_SAE=y
+CONFIG_SAE=y
 
 # SAE Public Key, WPA3-Personal
-#CONFIG_SAE_PK=y
+CONFIG_SAE_PK=y
 
 # Remove debugging code that is printing out debug messages to stdout.
 # This can be used to reduce the size of the hostapd considerably if debugging
@@ -289,7 +289,7 @@ CONFIG_TLS=internal
 
 # TLS-based EAP methods require at least TLS v1.0. Newer version of TLS (v1.2)
 # can be enabled to enable use of stronger crypto algorithms.
-#CONFIG_TLSV12=y
+CONFIG_TLSV12=y
 
 # Select which ciphers to use by default with OpenSSL if the user does not
 # specify them.
@@ -323,7 +323,7 @@ CONFIG_HS20=y
 #CONFIG_SQLITE=y
 
 # Enable Fast Session Transfer (FST)
-#CONFIG_FST=y
+CONFIG_FST=y
 
 # Enable CLI commands for FST testing
 #CONFIG_FST_TEST=y
@@ -363,7 +363,7 @@ CONFIG_HS20=y
 # Multiband Operation support
 # These extensions facilitate efficient use of multiple frequency bands
 # available to the AP and the devices that may associate with it.
-#CONFIG_MBO=y
+CONFIG_MBO=y
 
 # Client Taxonomy
 # Has the AP retain the Probe Request and (Re)Association Request frames from
