--- a/package/system/rpcd/Makefile
+++ b/package/system/rpcd/Makefile
@@ -11,9 +11,9 @@ PKG_NAME:=rpcd
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL=$(PROJECT_GIT)/project/rpcd.git
-PKG_MIRROR_HASH:=4b4c0a15180a4e39a5af5a6b9c7cf663bcef53d40df780e4da6edd6e63966006
-PKG_SOURCE_DATE:=2024-02-22
+PKG_SOURCE_URL=https://github.com/rmandrad/rpcd
+PKG_MIRROR_HASH:=48caadbe3979bf90a2fbc56083f946dbbba5bbc2
+PKG_SOURCE_DATE:=2024-09-12
 PKG_SOURCE_VERSION:=8ef4c2587ac0041049c67befed281a70cf240769
 PKG_MAINTAINER:=Jo-Philipp Wich <jo@mein.io>
 
