hostapd - reintroduce 11be config

--- a/package/network/services/hostapd/Config.in
+++ b/package/network/services/hostapd/Config.in
@@ -33,12 +33,16 @@ config WPA_WOLFSSL
 
 config DRIVER_11AC_SUPPORT
 	bool
-	default y
+	default n
 
 config DRIVER_11AX_SUPPORT
 	bool
-	default y
+	default n
 	select WPA_MBO_SUPPORT
+
+config DRIVER_11BE_SUPPORT
+	bool
+	default n
 
 config WPA_ENABLE_WEP
 	bool "Enable support for unsecure and obsolete WEP"
@@ -59,8 +63,3 @@ config WPA_MBO_SUPPORT
 	  that facilitate efficient use of multiple frequency bands.
 	  Enabling MBO on an AP using RSN requires 802.11w to be enabled.
 	  Hostapd will refuse to start if MBO and RSN are enabled without 11w.
-
-config DRIVER_11BE_SUPPORT
-	bool
-	default y
-
