--- a/package/system/rpcd/Makefile
+++ b/package/system/rpcd/Makefile
@@ -8,13 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rpcd
-PKG_RELEASE:=3
+PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL=https://github.com/rmandrad/rpcd
-PKG_MIRROR_HASH:=48caadbe3979bf90a2fbc56083f946dbbba5bbc2
-PKG_SOURCE_DATE:=2024-09-12
-PKG_SOURCE_VERSION:=8ef4c2587ac0041049c67befed281a70cf240769
+PKG_SOURCE_URL=$(PROJECT_GIT)/project/rpcd.git
+PKG_MIRROR_HASH:=67b2cb985d8712a3e5a17ebf8c74fd35d553c8f9a4197616f9a3649a8740cc33
+PKG_SOURCE_DATE:=2024-09-17
+PKG_SOURCE_VERSION:=9f4b86e70352ab9ca6aa272d096419acc53e2390
 PKG_MAINTAINER:=Jo-Philipp Wich <jo@mein.io>
 
 PKG_LICENSE:=ISC
