several updates / sync patches

--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -11,7 +11,7 @@ PKG_SOURCE_PROTO:=git
 
 PKG_SOURCE_DATE:=2024-09-23
 PKG_SOURCE_VERSION:=09ae763c65539f2177430c44a1eb5dcb2b734bdd
-PKG_MIRROR_HASH:=771d9992ef837f0c4a58329ed425fb8b00334ab73834216596b3ee9872ab3f79
+PKG_MIRROR_HASH:=a68df9981167ccb1731537035f7a48bf481b1f090c9ecf856eda4d931ab545d4
 
 PKG_MAINTAINER:=Felix Fietkau <nbd@nbd.name>
 PKG_USE_NINJA:=0
@@ -42,6 +42,8 @@ define KernelPackage/mt76-default
   DEPENDS:= \
 	+kmod-mac80211 \
 	+@DRIVER_11AC_SUPPORT \
+	+@DRIVER_11AX_SUPPORT \
+	+@DRIVER_11BE_SUPPORT \
 	+@KERNEL_PAGE_POOL
 endef
 
