add debug options to mt76 / mac80211

--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -6,10 +6,12 @@ PKG_RELEASE=1
 PKG_LICENSE:=GPLv2
 PKG_LICENSE_FILES:=
 
-PKG_SOURCE_URL:=https://github.com/openwrt/mt76
+#PKG_SOURCE_URL:=https://github.com/openwrt/mt76
+PKG_SOURCE_URL:=https://github.com/rmandrad/mt76
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_DATE:=2024-09-29
-PKG_SOURCE_VERSION:=680bc70f161fde0f167e2ae50c771be4775eb50a
+#PKG_SOURCE_VERSION:=680bc70f161fde0f167e2ae50c771be4775eb50a
+PKG_SOURCE_VERSION:=6db91bfbc17863f034ca511526ebf7cd85c38858
 PKG_MIRROR_HASH:=bcdb95e40cfceba56a565ad6b6d9f92a122e7230d0f7f950b3d39e4280723cca
 
 PKG_MAINTAINER:=Felix Fietkau <nbd@nbd.name>
