fix eip197 support point mt76 to top of the commit chain

--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -6,12 +6,12 @@ PKG_RELEASE=1
 PKG_LICENSE:=GPLv2
 PKG_LICENSE_FILES:=
 
-#PKG_SOURCE_URL:=https://github.com/openwrt/mt76
-PKG_SOURCE_URL:=https://github.com/rmandrad/mt76
+PKG_SOURCE_URL:=https://github.com/openwrt/mt76
+#PKG_SOURCE_URL:=https://github.com/rmandrad/mt76
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_DATE:=2024-10-02
+PKG_SOURCE_DATE:=2024-10-06
 #PKG_SOURCE_VERSION:=680bc70f161fde0f167e2ae50c771be4775eb50a
-PKG_SOURCE_VERSION:=6db91bfbc17863f034ca511526ebf7cd85c38858
+PKG_SOURCE_VERSION:=82a452919f525a29a6d1a140dc6df2e50ec4df19
 PKG_MIRROR_HASH:=dce25a8f93a00f7dbab89d1fb6a2f1e4f97b8e71ffdbf3e2f8873100132d3dcf
 
 PKG_MAINTAINER:=Felix Fietkau <nbd@nbd.name>
