--- a/package/system/fstools/Makefile
+++ b/package/system/fstools/Makefile
@@ -32,6 +32,7 @@ include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
 
 #TARGET_LDFLAGS += $(if $(CONFIG_USE_GLIBC),-ldl)
+#TARGET_LDFLAGS += $(if $(CONFIG_USE_GLIBC),-ldl)
 CMAKE_OPTIONS += $(if $(CONFIG_FSTOOLS_UBIFS_EXTROOT),-DCMAKE_UBIFS_EXTROOT=y)
 CMAKE_OPTIONS += $(if $(CONFIG_FSTOOLS_OVL_MOUNT_FULL_ACCESS_TIME),-DCMAKE_OVL_MOUNT_FULL_ACCESS_TIME=y)
 CMAKE_OPTIONS += $(if $(CONFIG_FSTOOLS_OVL_MOUNT_COMPRESS_ZLIB),-DCMAKE_OVL_MOUNT_COMPRESS_ZLIB=y)
@@ -42,9 +43,16 @@ define Package/libfstools-bootparam
   TITLE:=Boot parameter library for OpenWrt filesystem tools
 endef
 
+define Package/libfstools-bootparam
+  SECTION:=libs
+  CATEGORY:=Libraries
+  TITLE:=Boot parameter library for OpenWrt filesystem tools
+endef
+
 define Package/fstools
   SECTION:=base
   CATEGORY:=Base system
+  DEPENDS:=+ubox +NAND_SUPPORT:ubi-utils +libfstools-bootparam
   DEPENDS:=+ubox +NAND_SUPPORT:ubi-utils +libfstools-bootparam
   TITLE:=OpenWrt filesystem tools
   MENU:=1
@@ -90,6 +98,7 @@ define Package/block-mount
   CATEGORY:=Base system
   TITLE:=Block device mounting and checking
   DEPENDS:=+ubox +libubox +libuci +libblobmsg-json +libjson-c +libfstools-bootparam
+  DEPENDS:=+ubox +libubox +libuci +libblobmsg-json +libjson-c +libfstools-bootparam
 endef
 
 define Package/blockd
@@ -97,30 +106,6 @@ define Package/blockd
   CATEGORY:=Base system
   TITLE:=Block device automounting
   DEPENDS:=+block-mount +fstools +libubus +kmod-fs-autofs4 +libblobmsg-json +libjson-c
-endef
-
-define Package/libfstools-bootparam/install
-	$(INSTALL_DIR) $(1)/lib
-
-	$(INSTALL_DATA) $(PKG_INSTALL_DIR)/usr/lib/libfstools-bootparam.so $(1)/lib/
-endef
-
-define Package/libfstools-bootparam/install
-	$(INSTALL_DIR) $(1)/lib
-
-	$(INSTALL_DATA) $(PKG_INSTALL_DIR)/usr/lib/libfstools-bootparam.so $(1)/lib/
-endef
-
-define Package/libfstools-bootparam/install
-	$(INSTALL_DIR) $(1)/lib
-
-	$(INSTALL_DATA) $(PKG_INSTALL_DIR)/usr/lib/libfstools-bootparam.so $(1)/lib/
-endef
-
-define Package/libfstools-bootparam/install
-	$(INSTALL_DIR) $(1)/lib
-
-	$(INSTALL_DATA) $(PKG_INSTALL_DIR)/usr/lib/libfstools-bootparam.so $(1)/lib/
 endef
 
 define Package/libfstools-bootparam/install
@@ -172,6 +157,7 @@ define Build/InstallDev
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libubi-utils.a $(1)/usr/lib/
 endef
 
+$(eval $(call BuildPackage,libfstools-bootparam))
 $(eval $(call BuildPackage,libfstools-bootparam))
 $(eval $(call BuildPackage,fstools))
 $(eval $(call BuildPackage,snapshot-tool))
