--- a/.github/workflows/single-target.yml
+++ b/.github/workflows/single-target.yml
@@ -29,7 +29,7 @@ jobs:
       contents: read
       packages: read
       actions: write
-    uses: openwrt/actions-shared-workflows/.github/workflows/label-target.yml@main
+    uses: openwrt/actions-shared-workflows/.github/workflows/label-target.yml@ynezz/single-kernel
     with:
       target: armsr
       subtarget: armv8
